# teaclave-sgx

./: .gitignore  README.md  pack.sh
edls/: Cargo.toml
hello-world/: CMakeLists.txt  README.md
hello-world/app/: CMakeLists.txt  Cargo.toml
hello-world/app/src/: main.rs
hello-world/cmake/: sgx.cmake
hello-world/enclave/: CMakeLists.txt  Cargo.toml
hello-world/enclave/src/: lib.rs
usgx/: Cargo.toml
usgx/sgx_urts/: Cargo.toml
usgx/src/: lib.rs
